syntax = "proto3";

package chat.v1alpha;

message Chat {
    string id = 1;
    string content = 2;
}

message ChatUserRequest {
    Chat chat = 1;
    string user_id = 2;
    string owner_id =3;
}

message ChatGroupRequest {
    Chat chat = 1;
    string group_id =2;
    string owner_id =3;
}

message ChatReponse {
    Chat chat = 1;
}

message UserRequest {
    string owner_id=1;
    string user_id=2;
}

message GroupRequest {
    string owner_id=1;
    string group_id=2;
}

message ChatList {
    repeated Chat chats = 1;
}


service ChatService {
    rpc CreateChatWithUser (ChatUserRequest) returns (ChatReponse);
    rpc CreateChatWitGroup (ChatGroupRequest) returns (ChatReponse);
    rpc FindChatWithUser (UserRequest) returns (ChatList); 
    rpc FindChatWithGroup (GroupRequest) returns (ChatList); 
}


